# sim-pipe

./: .gitattributes  .gitignore  LICENSE.txt  README.md  biosimulators_Andrews_ecoli.simularium  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
outputs/: ecoli_spatial_1.simularium
sim_pipe/: andrews_ecoli_spatial_smoldyn.simularium
sim_pipe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sim_pipe/data_generators/: __smoldyn_data_generator.py  biosimulators_data_generator.py  smoldyn_data_generator.py
sim_pipe/tests/: test_biosimulators.py  test_main.py  test_smoldyn.py
simularium_files/: biosimulators_Andrews_ecoli.simularium
smoldyn-2.72-mac-Intel/lib/: libsmoldyn_shared.dylib
test_simulation_outputs/0_4/: log.yml
test_simulation_outputs/10_39/: log.yml
test_simulation_outputs/11/: log.yml  reports.h5
test_simulation_outputs/11_41/: log.yml
test_simulation_outputs/12_54/: log.yml
test_simulation_outputs/13/: log.yml
test_simulation_outputs/13_29/: log.yml
test_simulation_outputs/14_4/: log.yml
test_simulation_outputs/14_40/: log.yml
test_simulation_outputs/16_43/: log.yml
test_simulation_outputs/18_41/: log.yml
test_simulation_outputs/1_2/: log.yml
test_simulation_outputs/21_28/: log.yml
test_simulation_outputs/22_19/: log.yml
test_simulation_outputs/23_7/: log.yml
test_simulation_outputs/2_32/: log.yml
test_simulation_outputs/2_4/: log.yml
test_simulation_outputs/34_19/: log.yml
test_simulation_outputs/36_26/: log.yml
test_simulation_outputs/36_9/: log.yml
test_simulation_outputs/3_27/: log.yml
(+19 files in other folders)
