[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim_pipe"
version = "0.1.0"
description = "A Simularium, Smoldyn, and Biosimulators Data Pipeline"
authors = [{name="Alexander Patrie", email="apatrie@uchc.edu"}]

[project.license]
file = "LICENSE.txt"

[options]
python_requires = ">=3.10"
install_requires = [
    "zarr",
    "biosimulators-utils",
    "tellurium",
    "simulariumio[tutorial]",
 ]